move service into scommon and include account browe into web

--- a/kilde-assignment-web/src/main/resources/com/senior/kilde/assignment/web/pages/investor/InvestorBrowsePage.html
+++ b/kilde-assignment-web/src/main/resources/com/senior/kilde/assignment/web/pages/investor/InvestorBrowsePage.html
@@ -13,7 +13,7 @@
                 <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="card card-info">
                         <div class="card-header">
-                            <h3 class="card-title">Group</h3>
+                            <h3 class="card-title">Investor</h3>
                         </div>
                         <form wicket:id="form">
                             <div class="card-body">
